# Robotics2018_19

./: ACKERMAN ALGORITHM.txt  README.md  frames.gv  readme.txt
First/first_project/: CMakeLists.txt
First/first_project/cfg/: parameters.cfg
First/first_project/launch/: launch.launch
First/first_project/src/: ackermann.cpp  tf_odom_pub.cpp
Second/: Cose utili.txt
Second/second_project/: CMakeLists.txt  CMakeLists.txt.old  package.xml  package.xml.old  readme.txt
Second/second_project/launch/: complementary_filter.launch  launch_all.launch
Second/second_project/params/: navsat_transform_param.yaml
Second/second_project/src/: complementary_filter_ros.cpp  odom_pub.cpp  tf_odom_pub.cpp
custom_messages/: CMakeLists.txt  package.xml
first_project/: CMakeLists.txt  launch.launch  package.xml  readme.txt
first_project/cfg/: parameters.cfg
first_project/launch/: launch.launch
first_project/msg/: customPoses.msg
first_project/src/: ackermann.cpp  aggregator.cpp  differential.cpp  pub.cpp  subscriber_sync.cpp  test.cpp  tf_odom_pub.cpp
message_filters/src/: sub_pol.cpp
project/: CMakeLists.txt  package.xml
project/custom_messages/: CMakeLists.txt
project/src/: pub.cpp
