cmake_minimum_required(VERSION 2.8.3)
project (first_project)

find_package(catkin REQUIRED COMPONENTS roscpp roslaunch std_msgs tf message_generation dynamic_reconfigure)
add_message_files(FILES floatStamped.msg odomStamped.msg)
generate_messages(DEPENDENCIES std_msgs)
generate_dynamic_reconfigure_options(cfg/parameters.cfg)
roslaunch_add_file_check(launch)
catkin_package(CATKIN_DEPENDS message_runtime std_msgs)

include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(ackermann src/ackermann.cpp)
target_link_libraries(ackermann ${catkin_LIBRARIES})
add_dependencies(ackermann ${catkin_EXPORTED_TARGETS})
add_dependencies(ackermann ${PROJECT_NAME}_gencfg)

add_executable(differential src/differential.cpp)
target_link_libraries(differential ${catkin_LIBRARIES})
add_dependencies(differential ${catkin_EXPORTED_TARGETS})
add_dependencies(differential ${PROJECT_NAME}_gencfg)

add_executable(aggregator src/aggregator.cpp)
target_link_libraries(aggregator ${catkin_LIBRARIES})
add_dependencies(aggregator ${catkin_EXPORTED_TARGETS})
add_dependencies(aggregator ${PROJECT_NAME}_gencfg)
