<?xml version="1.0"?>
<package format="1">
  <name>second_project</name>
  <version>0.0.0</version>
  <description>Second Project Robotics 2019</description>
  <maintainer email="alessandroaandrea.vogrig@mail.polimi.it">alessandro</maintainer>
  <maintainer email="elenarosalba.schinelli@mail.polimi.it">elena</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
